--- a/views/usedcars.handlebars
+++ b/views/usedcars.handlebars
@@ -1,71 +1,7 @@
 <ol class="post-list">
-          <li>
-            <article class="post">
-                <div class="make">
-                  <p>Make:</p>
-                  <span>({{ post_make }})</span>
-                </div>
-                <div class="make">
-                    <p>Model:</p>
-                    <span>({{ post_model }})</span>
-                </div>
-                <div class="price">
-                    <p>Price:</p>
-                    <span>({{ post_price }})</span>
-                </div>
-                <div class="type">
-                    <p>Type:</p>
-                    <span>({{ post_type }})</span>
-                </div>
-                <div class="meta">
-                    {{user.username}} on {{ created_at}}
-                  </div>
-              </article>
-          </li>
-          <li>
-            <article class="post">
-                <div class="make">
-                  <p>Make:</p>
-                  <span>({{ post_make }})</span>
-                </div>
-                <div class="make">
-                    <p>Model:</p>
-                    <span>({{ post_model }})</span>
-                </div>
-                <div class="price">
-                    <p>Price:</p>
-                    <span>({{ post_price }})</span>
-                </div>
-                <div class="type">
-                    <p>Type:</p>
-                    <span>({{ post_type }})</span>
-                </div>
-                <div class="meta">
-                    {{user.username}} on {{ created_at}}
-                  </div>
-              </article>
-          </li>
-          <li>
-            <article class="post">
-                <div class="make">
-                  <p>Make:</p>
-                  <span>({{ post_make }})</span>
-                </div>
-                <div class="make">
-                    <p>Model:</p>
-                    <span>({{ post_model }})</span>
-                </div>
-                <div class="price">
-                    <p>Price:</p>
-                    <span>({{ post_price }})</span>
-                </div>
-                <div class="type">
-                    <p>Type:</p>
-                    <span>({{ post_type }})</span>
-                </div>
-                <div class="meta">
-                    {{user.username}} on {{ created_at}}
-                  </div>
-              </article>
-          </li>
-        </ol>
+    {{#each posts as |post|}}
+  <li>
+    {{> usedcars-info post }}
+  </li>
+  {{/each}}
+</ol>
