--- a/template/login.html
+++ b/template/login.html
@@ -2,62 +2,61 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dealership Inventory</title>
-  <link rel="stylesheet" href="./assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dealer Dealer</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <header>
-      <h1>
-        <a href="/">Dealership Inventory</a>
-      </h1>
-      <nav>
-        <a href="/newcars">New Cars</a>
-        <a href="/usedcars">Used Cars</a>
-        <button id="logout" class="btn-no-style">logout</button>
-        <a href="/login">login</a>
-      </nav>
-    </header>
-    <main>
-        <form class="login-form">
-            <div>
-              <label for="email-login">email:</label>
-              <input type="text" id="email-login" />
+    <div class="custom-container">
+        <h1 class="text-center m-4 text-success">Dealer Dealer</h1>
+        <div class="jumbotron">
+            <h3 class="text-center text-primary">Login Form</h3>
+            <br>
+            {{#if success}}
+            <div class="alert alert-success alert-dismissible fade show">
+                <strong>{{success}}</strong>
+                <button class="close" data-dismiss="alert"><span>&times;</span></button>
             </div>
-            <div>
-              <label for="password-login">password:</label>
-              <input type="password" id="password-login" />
+            {{/if}}
+            {{#if error}}
+            <div class="alert alert-danger alert-dismissible fade show">
+                <strong>{{error}}</strong>
+                <button class="close" data-dismiss="alert"><span>&times;</span></button>
             </div>
-            <div>
-              <button type="submit">login</button>
-            </div>
-          </form>
-          <form class="signup-form">
-            <div>
-              <label for="username-signup">username:</label>
-              <input type="text" id="username-signup" />
-            </div>
-            <div>
-              <label for="email-signup">email:</label>
-              <input type="text" id="email-signup" />
-            </div>
-            <div>
-              <label for="password-signup">password:</label>
-              <input type="password" id="password-signup" />
-            </div>
-            <div>
-              <button type="submit">signup</button>
-            </div>
-          </form>
-    </main>
-    <footer>
-      Thanks for visiting!
-    </footer>
-  </div>
-  <script src="/javascript/logout.js"></script>
-</body>
+            {{/if}}
 
+            <form action="" id="login" method="POST">
+                <div class="form-group">
+                    <label for="email">Email Id <span class="text-danger">*</span></label>
+                    <input type="email" class="form-control" name="username" id="email" placeholder="Enter your email id">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password <span class="text-danger">*</span></label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Enter Your Password">
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Login" class="btn btn-info btn-block">
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-8">
+                            New user? Register <a href="/register">here</a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script>
+    setTimeout(() => {
+        $('.alert').remove();
+    }, 3000)
+</script>
 </html>
