--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,11 +18,15 @@
                 <label for="post-new-type">Type</label>
                 <input id="post-new-type" name="post-new-type" />
               </div>
+              <div>
+                <label for="post-new-user_id">user_id</label>
+                <input id="post-new-iser_id" name="post-new-user_id" />
+              </div>
               <button type="submit" class="btn">Post</button>
             </form>
           </section>
           <section>
-              
+
             <h2>Add Used Car</h2>
           
             <form class="new-used-form">
@@ -45,3 +49,4 @@
               <button type="submit" class="btn">Post</button>
             </form>
           </section>
+          <script src="./js/addCar.js"></script>
