add used car post

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -29,7 +29,7 @@
 
             <h2>Add Used Car</h2>
           
-            <form class="new-used-form">
+            <form class="used-car-form">
               <div>
                 <label for="post-used-make">Make</label>
                 <input type="text" id="post-used-make" name="post-used-make" />
@@ -45,6 +45,10 @@
               <div>
                 <label for="post-used-type">Type</label>
                 <input id="post-used-type" name="post-used-type" />
+              </div>
+              <div>
+                <label for="post-used-user_id">user_id</label>
+                <input id="post-used-iser_id" name="post-used-user_id" />
               </div>
               <button type="submit" class="btn">Post</button>
             </form>
