--- a/views/usedcars.handlebars
+++ b/views/usedcars.handlebars
@@ -1,6 +1,6 @@
 <ol class="post-list">
     {{#each posts as |post|}}
-  <li>
+  <li class="list-post">
     {{> usedcars-info post }}
   </li>
   {{/each}}
