--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,7 +7,8 @@
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-    color: #333;
+    /* color: #333; */
+    background-color: #006f9d;
   }
   
   a {
@@ -23,32 +24,45 @@
   p {
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: aliceblue;
   }
   
   button {
     border: 0;
-    padding: 1%;
+    padding: 10px;
     font-weight: bold;
     transition: background-color .1s;
     cursor: pointer;
     border-radius: 5px;
+    background-color: #00e6ee;
   }
   
   .post-list {
-    margin: 0;
-    padding: 0;
+    display: inline-flex;
+    flex-wrap: wrap;
+
   }
-  
+
+  .post-form{
+    display: inline-flex;
+    flex-direction: column;
+    padding: 10px;
+    margin-left: 50px;
+  }
+
+
   textarea, input {
-    padding: .5%;
+    padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    background-color: #3486eb;
+    margin-bottom: 10px;
   }
   
   textarea:focus, input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 1px solid #225ca3;
+    background-color: #00e6ee ;
   }
   
   textarea {
@@ -103,68 +117,34 @@
     background: none;
     color: #3486eb;
   }
-  
-  .delete-post-btn {
-    background-color: #d41414;
+
+  .list-post{
+    display: flex;
   }
-  
-  .delete-post-btn:hover {
-    background-color: #ff643d;
+
+  .display{
+    display: flex;
+    flex-wrap: wrap;
   }
-  
   .post {
-    margin-bottom: 2%;
-    line-height: 150%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items:flex-start;
+    margin: 0 auto 30px auto;
+  }
+
+  .new {
+    margin: 40px;
+    padding: 10px;
+    background: #012881;
+    color: #00e6ee;
+    flex: 0 0 400px;
+    border-radius: 10px;
+    text-align: center;
   }
   
   .post span {
     text-decoration: none;
     font-size: 90%;
-    color: blue;
-  }
-  
-  .edit-link {
-    display: block;
-    margin: -1.5% 0 2% 0;
-  }
-  
-  .comment-form {
-    margin-bottom: 5%;
-  }
-  
-  .comment {
-    padding: 1%;
-    margin-bottom: 1%;
-  }
-  
-  .comment:nth-child(odd) {
-    background-color: #fff5eb;
-  }
-  
-  .comment .meta {
-    font-size: 90%;
-    margin-bottom: .5%;
-    opacity: .6;
-  }
-  
-  .edit-post-form {
-    margin-bottom: 5%;
-  }
-  
-  footer {
-    border-top: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    padding: 1%;
-    font-size: 110%;
-  }
-
-  .card {
-      margin-bottom: 1em;
-      margin-top: 1em;
-  }
-
-  .rows{
-      display:flex;
-      flex-direction: column;
+    color: #00e6ee;
   }
