--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section class="post-form">
             <h2>Add New Car</h2>
           
             <form class="new-car-form">
@@ -25,7 +25,7 @@
               <button type="submit" class="btn">Post</button>
             </form>
           </section>
-          <section>
+          <section class="post-form">
 
             <h2>Add Used Car</h2>
           
