--- a/views/newcars.handlebars
+++ b/views/newcars.handlebars
@@ -1,6 +1,6 @@
 <ol class="post-list">
     {{#each posts as |post|}}
-  <li>
+  <li class="list-post">
     {{> newcars-info post }}
   </li>
   {{/each}}
